veewee git submodule url updated to my personal fork
Signed-off-by: Sebastien Varrette <sebastien.varrette@uni.lu>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule ".submodules/veewee"]
 	path = .submodules/veewee
-	url = https://github.com/jedi4ever/veewee.git
+	url = https://github.com/Falkor/veewee.git
 	branch = master
