Add Git submodule '.submodules/puppet-bootstrap' from 'https://github.com/hashicorp/puppet-bootstrap.git'
Signed-off-by: Sebastien Varrette <Sebastien.Varrette@uni.lu>

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = .submodules/veewee
 	url = https://github.com/Falkor/veewee.git
 	branch = master
+[submodule ".submodules/puppet-bootstrap"]
+	path = .submodules/puppet-bootstrap
+	url = https://github.com/hashicorp/puppet-bootstrap.git
+	branch = master
